--- a/exercises/coding-from-life/index.html
+++ b/exercises/coding-from-life/index.html
@@ -9,6 +9,16 @@
   <link rel="stylesheet" href="main.css">
 </head>
 <body>
-  <!-- Your code here! -->
+  <div class="container">
+  <div class="background"></div>
+  <div class="candle_body"></div>
+    <div class="candle_stem"></div>
+      <div class="plant">
+        <div class="plant_pot"></div>
+        <div class="plant_leaves plant_leaves_1"></div>
+        <div class="plant_leaves plant_leaves_2"></div>
+        <div class="plant_leaves plant_leaves_3"></div>
+      </div>
+    <div>
 </body>
 </html>
