--- a/project-1/index.html
+++ b/project-1/index.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Project-1</title>
 </head>
+
 <body>
-  <h1>Operation: Fleet library</h1>
-  <p><strong>*Before proceeding:</strong> make sure you are ready to go outside and have your student ID.</p>
+  <button>Fleet library</button>
+  <p><strong>*Before proceeding:</strong> make sure you are ready to go outside and have your student ID.
+  </p>
   
-<ol>
-    <li>
-      <p>Open the front door;</p>
-      <img src="">
-    </li>
+  ul.no-bullets {
+    list-style-type: none; /* Remove bullets */
+    padding: 0; /* Remove padding */
+    margin: 0; /* Remove margins */
+  }
+    <li>Open the front door;</li>
     <li>Step outside;</li>
     <li>Put your headphones on;</li>
     <li>On your phone, play the most recent playlist;</li>
@@ -31,6 +35,6 @@
     <li>Read the first chapter;</li>
     <li>Close the book;</li>
     <li>Great success! End of mission.</li>
-</ol>
+</li>
 </body>
 </html>
