--- a/project-1/main_page.html
+++ b/project-1/main_page.html
@@ -10,7 +10,9 @@
   <body>
       <h1>Glikeriya's assignment</h1>
       
-      <p>Project 1</p>
+      <p>Project 1
+        <a href="project-1.html"></a>
+      </p>
 
       <p>Project 2</p>
 
