--- a/project-1/index.html
+++ b/project-1/index.html
@@ -40,13 +40,13 @@
   </button>
 
   <button
-  class="step-6">
-    6. If: road unknown, then: open Google maps on your phone and get directions
+  class="step-5a">
+    5a. If: road unknown, then: open Google maps on your phone and get directions
   </button>
 
   <button
   class="step-7">
-    7. Stop in front of the library main entrance
+   7 Stop in front of the library main entrance
   </button>
 
   <button
