--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <h1>Glikeriya's assignment</h1>
       
       <p>
-        <a href="project-1/index.html">Project 1</a>
+        <a href="project-1">Project 1</a>
       </p>
 
       <p>Project 2</p>
