--- a/project-1/index.html
+++ b/project-1/index.html
@@ -46,48 +46,38 @@
 
   <button
   class="step-7">
-   7 Stop in front of the library main entrance
+   7 With your left hand, take the ID out of it’s place and scan it through the nearest
+   scabber to open the front door
   </button>
 
   <button
   class="step-8">
-    8. With your left hand, take the ID out of it’s place and scan it through the nearest
-  scabber to open the front door
+    8. Put your ID back
   </button>
 
   <button
   class="step-9">
-    9. Put your ID back
+    9. Enter the building
   </button>
 
   <button
   class="step-10">
-    10. Enter the building
+    10. Proceed to the Main hall
   </button>
 
   <button
   class="step-11">
-    11. Proceed to the Main hall
+    11. Find any book you are interested
   </button>
 
   <button
   class="step-12">
-    12. Find any book you are interested
+    12. Pick it and approach to the nearest seat available
   </button>
 
   <button
   class="step-13">
-    13. Pick it and approach to the nearest seat available
-  </button>
-
-  <button
-  class="step-14">
-    14. Sit
-  </button>
-
-  <button
-  class="step-15">
-    15. Open the book
+    13. Sit & Open the book
   </button>
 
   <button
