--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <title>Glikeriya</title>
 </head>
 <body>
-  <a href="/project-1">Project 1</a>
-  <a href="/project-2">Project 2</a>
-  <a href="/project-3">Project 2</a>
+  <a href="project-1">Project 1</a>
+  <a href="project-2">Project 2</a>
+  <a href="project-3">Project 3</a>
 </body>
 </html>
